updated alignment view (added description for options, added framework for export, fixed bug relating to tooltip sizing are and alignemnt view tooltip not displaying properly when 2D view is present), moved generateCanvas function outside of alignment-view-plugin-component so in the future it can be in files view

--- a/src/app/visualizationComponents/AlignmentViewComponent/alignment-view-plugin-component.scss
+++ b/src/app/visualizationComponents/AlignmentViewComponent/alignment-view-plugin-component.scss
@@ -4,7 +4,23 @@
     z-index: 1 !important;
     padding: 1px; 
     //background-color: rgb(168, 125, 211, .2);
+}
+
+:host ::ng-deep {
+  .p-accordion-tab:not(.p-accordion-tab-active) {
+    .p-toggleable-content {
+      height: 0;
+      overflow: hidden;
+    }
   }
+
+  .p-accordion-tab.p-accordion-tab-active {
+    .p-toggleable-content {
+      height: auto !important;
+      overflow: auto !important;
+    }
+  }
+}
 
     /* Button appearance on hover */
 .btn-icon:hover {
@@ -85,7 +101,7 @@
   display: none;
 }
 
-#tooltip {
+#tooltipAlign {
   background-color: lightgray; 
   padding: 5px;
   display: block;
